updated with my classes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Misgana Kassa</h1>
-<h2>Welcome to my personal site!</h2>
-<p>I'm hosted with GitHub Pages.</p>
+<h1 align="center">Misgana Kassa</h1>
+<h2 align="center">Welcome to my personal site!</h2>
  <table width='79%' border=7px cellspacing=3 align="center">
         
  <h3 align="center"> Classes</h3>
