--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1 align="center">Misgana Kassa</h1>
-<img src="misgana-photo.jpg">
+<img src="misgana-photo.jpg" width="460" height="345">
 <h2 align="center">Welcome to my personal site!</h2>
  <table width='79%' border=7px cellspacing=3 align="center">
         
